assets/pages/new-contributions-landing/contributionsLanding.scss
/* ... */
.confirmation__title {
  font-weight: 900;
  font-size: 1;
  margin: ($gu-v-spacing / 3) 0;
}

.confirmation__message {
  font: 300 22px/1.2 $gu-headline;
  margin: ($gu-v-spacing / 4) 0 $gu-v-spacing * 2;
}

.confirmation__message--direct-debit {
  margin-left: -10px;
  margin-right: -10px;
  padding: 0 10px $gu-v-spacing;
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
}

.marketing-permissions__message, .set-password__message {
  font-family: $gu-text-egyptian-web;
  letter-spacing: -0.5px;
  margin-bottom: 24px;
  line-height: 20px;
}

.set-password__message {
  margin-bottom: 0;
}

.set-password__form {
 padding-bottom: 30px;
}

.form__submit.form__submit--create-account {
  padding-bottom: $gu-h-spacing;
}

.marketing-permissions__title, .set-password__title {
  font-family: $gu-text-egyptian-web;
  letter-spacing: -0.5px;
  font-weight: 900;
  font-size: 17px;
  margin: ($gu-v-spacing / 3) 0;
}

.confirmation--backtothegu {
  margin-bottom: $gu-v-spacing + 20px;
  padding-bottom: $gu-v-spacing;
  padding-top: $gu-v-spacing;
  border-bottom: 0;
}

.confirmation__meta {
  font-family: $gu-text-sans-web;
  font-size: 12px;
}

.button {
  align-items: center;
  border: 1px solid currentColor;
  background-color: gu-colour(garnett-neutral-5);
  border-radius: $gu-v-spacing * 2;
  font-family: $gu-text-sans-web;
  height: $gu-v-spacing * 3.5;
  line-height: 1;
  padding: 0 $gu-h-spacing;
  text-decoration: none;
  position: relative;

  svg {
    position: absolute;
    fill: currentColor;
    overflow: visible;
  }

  &:enabled {
    cursor: pointer;

    &:hover {
      filter: brightness(90%);
    }
  }
}

.button--newsletter {
  color: gu-colour(garnett-neutral-5);
  background-color: gu-colour(green-dark);
  border-color: gu-colour(green-dark);
  text-align: right;
  width: 140px;

  svg {
    right: calc(100% - 33px);
    height: 16px;
  }
}

.button--newsletter__subscribed {
  color: gu-colour(green-dark);
  background-color: transparent;
}

.button--right-arrow {
  width: 100%;
  padding: 0 50px 0 $gu-h-spacing;
  text-align: left;

  .svg-arrow-right-straight {
    left: calc(100% - 34px);
    height: 16px;
  }
}

.svg-subscribe, .svg-lock {
  width: 23px;
  height: 20px;
  fill: currentColor;
}

.svg-newsletters {
  display: block;
  margin: ($gu-v-spacing * 2) -10px 0;
}

/* = SIGN OUT link */

.component-signout {
  color: inherit;
  display: block;
  text-align: right;
}


/* PayPal Express Button */

.component-paypal-button-checkout {
  width: 100%;
}

.component-paypal-button-checkout--hidden {
  display: none;
}

.information__message {
  vertical-align: top;
  padding-left: 5px;
}

.component-password-failure-message {
  padding: 0 $gu-h-spacing $gu-v-spacing;
  margin-top: $gu-v-spacing;
}

.component-contributions-survey {
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
  margin: 0 -10px;
  padding: 0 10px;

  h3 {
    font-family: $gu-text-egyptian-web;
    letter-spacing: -0.5px;
    font-weight: 900;
    font-size: 17px;
    margin: ($gu-v-spacing / 3) 0;
  }

  .component-contributions-survey__button {
    display: inline-block;
    margin-bottom: $gu-v-spacing * 3;
    margin-top: $gu-v-spacing;
  }

  .component-cta-link__text {
    padding-right: 25px;
    font-size: 16px;
  }
}

/* Small header test */

@include mq($from: mobile, $until: tablet) {
  .gu-content--shrink {
    $header-height: 44px;
    grid-template-rows: [header-t] $header-height [header-b] 1fr [footer-t] auto [footer-b];

    .glogo {
      width: 30px;
      height: 30px;
      right: 0;
    }

    header[role="banner"] {
      height: $header-height;

      // to match .gu-content__content
      padding: 0 10px;
    }

    .countryGroups {
      margin-left: 0;

      // TODO: this is basically just vertical centering. use flex-box!
      margin-top: 4px;

      summary {
        padding-left: 0;
      }
    }

    .header {
      font-size: 22px;
      padding: $gu-v-spacing/2 $gu-h-spacing/2 $gu-v-spacing $gu-h-spacing/2;
    }

    .blurb {
      font-size: 16px;
      margin: 0;
    }
  }

  .gu-content--contribution-form.gu-content--no-blurb {
    .blurb {
      display: none;
    }
  }

  .gu-content--contribution-form.gu-content--no-header {
    .header {
      display: none;
    }
  }

  .gu-content--contribution-form.gu-content--no-blurb.gu-content--no-header {
    .form__radio-group-list {
      padding-top: 0;
    }
  }
}

